# Element

./: .gitmodules  CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: backend.cpp  backend.h  common.h  delta_time.cpp  delta_time.h  engine-core.cpp  image.h  main.cpp  resource_handler.cpp  resource_handler.h
src/core/: application.cpp  application.h  core_event_adapters.cpp  core_events.h  core_plugin_module.cpp  engine.cpp  engine.h  fs.h  init.cpp  init.h  log.cpp  log.h
src/display/: backend.h  cursor.h  display_event_adapters.cpp  events.h  input.h  window.h
src/ecs/: component_pool.h  componentpool.h  game_object.cpp  game_object.h  gameobject.cpp  gameobject.h  scene.cpp  scene.h  signature.cpp  signature.h  view.h
src/event/: event.cpp  event.h  ui_events.h  window_events.h
src/gl/: gl_backend.cpp  gl_backend.h  gl_include.h  index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h  vertex_array_layout.cpp  vertex_array_layout.h  vertex_buffer.cpp  vertex_buffer.h
src/gl/texture/: gl_texture.cpp  gl_texture.h  gl_texture_image.cpp  gl_texture_image.h
src/graphics/: vulkan.cpp  vulkan.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_descriptor..h  vulkan_descriptor.cpp  vulkan_descriptor.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_image.cpp  vulkan_image.h  vulkan_image_view.cpp  vulkan_image_view.h  vulkan_render_target.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_sync.cpp  vulkan_sync.h  vulkan_throw.h  vulkan_vma.cpp
src/plugins/: event_provider.cpp  event_provider.h  event_provider_plugin_module.cpp  loader.cpp  loader.h  module.cpp  module.h  module_plugin_module.cpp
src/render/: context.cpp  context.h  display.cpp  display.h  global_data.cpp  global_data.h  material.cpp  material.h  material_manager.h  mesh.cpp  mesh.h  mesh_manager.cpp  mesh_manager.h  pipeline.cpp  pipeline.h  pipeline_loader.h  pipeline_manager.h  render.cpp  render.h  render_events.h  render_plugin_module.cpp  render_sync.cpp  render_sync.h  resource_sync.cpp  resource_sync.h  scene_data_manager.cpp  scene_data_manager.h  scene_render.cpp  scene_render.h  shader.cpp  shader.h  shader_layout.h  shader_loader.h  vulkan.cpp  vulkan.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.h  vulkan_descriptor.cpp  vulkan_descriptor.h  (+10 more)
src/render/objects/: index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/render/opengl/: loader.cpp  loader.h
src/render/opengl/objects/: index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/resource/: async_loader.h  async_loader_events.h  loader.h  manager.h  referenced_manager.h
src/scenegraph/: node.cpp  node.h  node_manager.cpp  node_manager.h  node_ref.cpp  node_ref.h  node_storage.cpp  node_storage.h  node_type_info.cpp  node_type_info.h  scene.cpp  scene.h  scene_events.h  scene_manager.cpp  scene_manager.h  scenegraph_plugin_module.cpp  transform.cpp  transform.h
src/scenegraph/nodes/: camera_node.cpp  camera_node.h  camera_node_ref.h  mesh_node.cpp  mesh_node.h  mesh_node_ref.h
src/serialization/: component.h  core.h  defs.h  ecs.h  element.h  game_object.h  glm.h  packed_map.h  packed_set.h  pair.h  render.h  scene.h  scenegraph.h  serializers.h  shader.h  string.h  unordered_map.h  utils.h  vector.h
src/serialization/core/: fs.h
src/serialization/ecs/: game_object.h
src/serialization/render/: material.h  mesh.h  pipeline.h  shader.h  shader_layout.h
src/serialization/scenegraph/: node.h  node_ref.h  node_storage.h  nodes.h  scene.h  transform.h
src/serialization/scenegraph/nodes/: camera_node.h  mesh_node.h
src/serialization/shader/: layout.h  shader.h
src/serialization/utils/: packed_map.h  packed_set.h  uuid.h
src/shader/: layout.h  loader.h  shader.h
src/texture/: texture.cpp  texture.h  texture_filtering.h  texture_image.cpp  texture_image.h
src/ui/: ui.h
src/utils/: cmdline.cpp  cmdline.h  packed_map.h  packed_set.h  packedmap.h  padded_array_view.h  platform.h  pointer_like_wrapper.h  pre_exec.h  seed.cpp  seed.h  thread_pool.cpp  thread_pool.h  uuid.cpp  uuid.h
src/window/: window.h
